# TrenchBroomBFG

./: .clang-format  .gitmodules  CI-linux.sh  CI-windows.bat  CMakeLists.txt  README.md  clang-format-code.sh  cmake-linux-release.sh  cmake-vs2019-64bit.bat  cmake-vs2019-win64.bat  cmake-vs2022-win64.bat  format_code.bat  format_code.sh  vcpkg.json
.github/workflows/: ci.yml
app/: CMakeLists.txt
common/: CMakeLists.txt
common/benchmark/: CMakeLists.txt
common/src/: PreferenceManager.cpp  Preferences.cpp  Preferences.h  TrenchBroomApp.cpp  octree.h
common/src/Assets/: EntityModel.cpp  EntityModel.h  EntityModelManager.cpp  Quake3Shader.cpp  Quake3Shader.h  Texture.cpp  Texture.h  TextureManager.cpp
common/src/IO/: AssimpParser.cpp  AssimpParser.h  FreeImageTextureReader.cpp  FreeImageTextureReader.h  MapFileSerializer.cpp  NodeSerializer.cpp  NodeSerializer.h  NodeWriter.cpp  NodeWriter.h  ObjParser.cpp  ObjParser.h  ObjSerializer.cpp  Quake3ShaderFileSystem.cpp  Quake3ShaderParser.cpp  Quake3ShaderParser.h  Quake3ShaderTextureReader.cpp  Reader.h  ResourceUtils.cpp  StandardMapParser.cpp  StandardMapParser.h  Tokenizer.h
common/src/Model/: BrushEntityWithoutModelKeyIssueGenerator.cpp  BrushEntityWithoutModelKeyIssueGenerator.h  BrushFaceAttributes.cpp  BrushFaceAttributes.h  BrushNode.cpp  BrushNode.h  ConflictingTargetnameIssueGenerator.cpp  ConflictingTargetnameIssueGenerator.h  EditorContext.cpp  EmptyBrushEntityIssueGenerator.cpp  EmptyBrushEntityIssueGenerator.h  EmptyGroupIssueGenerator.cpp  EmptyGroupIssueGenerator.h  EmptyGroupValidator.cpp  (+72 more)
common/test/: CMakeLists.txt
dump-shortcuts/: CMakeLists.txt
dump-shortcuts/src/: Main.cpp
lib/: CMakeLists.txt
lib/tinybvh/: CMakeLists.txt
lib/tinybvh/include/: tiny_bvh.h
lib/tinybvh/src/: tiny_bvh_impl.cpp
(+44 files in other folders)
