add_subdirectory(Catch2)
add_subdirectory(BinaryLibs)
add_subdirectory(fmt EXCLUDE_FROM_ALL)
add_subdirectory(freetype)
add_subdirectory(glew)
add_subdirectory(kdl)
add_subdirectory(miniz)
add_subdirectory(tinyxml2)
add_subdirectory(vecmath)
add_subdirectory(stackwalker)
OPTION(ASSIMP_BUILD_TESTS "If the test suite for Assimp is built in addition to the library." OFF)
OPTION(ASSIMP_INSTALL "Disable this if you want to use assimp as a submodule." OFF)
# Link Assimp statically on Linux.
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux|FreeBSD")
    OPTION(BUILD_SHARED_LIBS "Build package with shared libraries." OFF)
endif()
add_subdirectory(assimp)
include_directories("assimp/include")